[gd_scene load_steps=4 format=2]

[ext_resource path="res://Spartan.tres" type="DynamicFont" id=1]
[ext_resource path="res://Spartan_Bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Accueil.gd" type="Script" id=3]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.109804, 0.105882, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Faction" type="Label" parent="."]
margin_left = 128.0
margin_top = 55.0
margin_right = 448.0
margin_bottom = 143.0
custom_fonts/font = ExtResource( 1 )
text = "Architekt"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Auteur" type="Label" parent="."]
anchor_top = 0.937
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 176.0
margin_top = 24.512
margin_right = -184.0
margin_bottom = -21.0
custom_fonts/font = ExtResource( 2 )
text = "Made by Thomas BOUET"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 0.937
margin_left = 128.0
margin_top = 160.0
margin_right = 448.0
margin_bottom = -15.488
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Profils" type="Button" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 127.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Profils"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mes listes" type="Button" parent="VBoxContainer"]
margin_top = 131.0
margin_right = 320.0
margin_bottom = 258.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Mes listes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compétences" type="Button" parent="VBoxContainer"]
margin_top = 262.0
margin_right = 320.0
margin_bottom = 390.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Compétences"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sorts" type="Button" parent="VBoxContainer"]
margin_top = 394.0
margin_right = 320.0
margin_bottom = 521.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Sorts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scénarios" type="Button" parent="VBoxContainer"]
margin_top = 525.0
margin_right = 320.0
margin_bottom = 652.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Scénarios"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Règles" type="Button" parent="VBoxContainer"]
margin_top = 656.0
margin_right = 320.0
margin_bottom = 784.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Règles"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Profils" to="." method="_on_Profils_pressed"]
[connection signal="pressed" from="VBoxContainer/Mes listes" to="." method="_on_Mes_listes_pressed"]
[connection signal="pressed" from="VBoxContainer/Compétences" to="." method="_on_Comptences_pressed"]
[connection signal="pressed" from="VBoxContainer/Sorts" to="." method="_on_Sorts_pressed"]
[connection signal="pressed" from="VBoxContainer/Scénarios" to="." method="_on_Scnarios_pressed"]
[connection signal="pressed" from="VBoxContainer/Règles" to="." method="_on_Rgles_pressed"]
